--- a/RpaEmailAPI/RpaEmailAPI.csproj
+++ b/RpaEmailAPI/RpaEmailAPI.csproj
@@ -1,3 +1,4 @@
+
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
@@ -7,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="MailKit" Version="3.4.2" />
+    <PackageReference Include="Npgsql" Version="4.1.3" />
   </ItemGroup>
 
 </Project>
