--- a/RpaEmailAPI/appsettings.json
+++ b/RpaEmailAPI/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=received-email;Username=postgres;Password=123456;"
+  },
+  "EmailSettings": {
+    "IMAP_HOST": "outlook.office365.com",
+    "IMAP_USER": "rs_teste@outlook.com"
+  },
+  "SensitiveData": {
+    "PASSWORD": "rsteste123456"
+  }
 }
